--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -14,6 +14,7 @@
   "or": "oder",
   "history": "Verlauf",
   "template": "Vorlage",
+  "templates": "Vorlagen",
   "notImplemented": "Nicht implementiert",
   "saveChanges": "Änderungen speichern",
   "discardChanges": "Änderungen verwerfen",
@@ -56,6 +57,22 @@
   "menuItemCollapsed": "Doppelklick zum Aufklappen",
   "menuRestoreApp": "{} öffnen",
   "menuQuitApp": "{} beenden",
+  "sysMenuAboutKeeWeb": "Über {}",
+  "sysMenuServices": "Dienste",
+  "sysMenuHide": "{} ausblenden",
+  "sysMenuHideOthers": "Andere ausblenden",
+  "sysMenuUnhide": "Alle anzeigen",
+  "sysMenuQuit": "{} beenden",
+  "sysMenuEdit": "Bearbeiten",
+  "sysMenuUndo": "Rückgängig",
+  "sysMenuRedo": "Wiederherstellen",
+  "sysMenuCut": "Ausschneiden",
+  "sysMenuCopy": "Kopieren",
+  "sysMenuPaste": "Einfügen",
+  "sysMenuSelectAll": "Alles auswählen",
+  "sysMenuWindow": "Fenster",
+  "sysMenuMinimize": "Minimieren",
+  "sysMenuClose": "Fenster schließen",
   "alertYes": "Ja",
   "alertNo": "Nein",
   "alertOk": "OK",
@@ -228,7 +245,7 @@
   "detHistoryDiscardChangesAlertBody": "Ungespeicherte Änderungen gehen dabei unwiderruflich verloren.",
   "detBackToList": "zurück zur Liste",
   "detSetIconColor": "Farbe ändern",
-  "detSetIcon": "Icon ändern",
+  "detSetIcon": "Symbol ändern",
   "detDropAttachments": "Anhänge hier ablegen",
   "detDelEntry": "Löschen",
   "detDelEntryPerm": "Dauerhaft löschen",
@@ -304,6 +321,7 @@
   "detIssueCloseAlertHeader": "Verstecke Passwortmeldungen",
   "detIssueCloseAlertBody": "Es gibt verschiedene Möglichkeiten diese Warnung zu verstecken:",
   "detIssueCloseAlertEntry": "Nicht für diesen Eintrag anzeigen.",
+  "detIssueCloseAlertSettings": "Globale Einstellungen anpassen",
   "autoTypeEntryFields": "Feld-Platzhalter",
   "autoTypeModifiers": "Hilfstasten",
   "autoTypeKeys": "Tasten",
@@ -390,6 +408,7 @@
   "setGenThemeSd": "Solarisiert dunkel",
   "setGenThemeSl": "Solarisiert hell",
   "setGenMoreThemes": "Mehr Themes",
+  "setGenAutoSwitchTheme": "Automatisch zwischen hellem und dunklem Thema umschalten, sofern möglich",
   "setGenLocale": "Sprache",
   "setGenLocOther": "Andere Sprachen sind als Plugins verfügbar.",
   "setGenFontSize": "Schriftgröße",
@@ -432,6 +451,7 @@
   "setGenLockAutoType": "Bei Auto-Type",
   "setGenLockOrSleep": "Bei Aktivierung von Bildschirmsperre oder Ruhezustand",
   "setGenStorage": "Synchronisierung",
+  "setGenDisableOfflineStorage": "Geladene Dateien nicht in Offline-Speicher zwischenspeichern",
   "setGenStorageLogout": "Abmelden",
   "setGenShowAdvanced": "Erweiterte Einstellungen anzeigen",
   "setGenDevTools": "Entwicklerwerkzeuge anzeigen",
@@ -446,6 +466,10 @@
   "setGenTouchIdMemory": "Nur mit Fingerabdruck entsperren, wenn KeeWeb aktiv ist",
   "setGenTouchIdFile": "Benutze immer den Fingerabdruck anstatt das Master-Passwort",
   "setGenTouchIdPass": "Benötige Master-Passwort nach",
+  "setGenAudit": "Audit",
+  "setGenAuditPasswords": "Warnungen für schwache Passwörter anzeigen",
+  "setGenAuditPasswordEntropy": "Passwortlänge und Zufälligkeit prüfen",
+  "setGenExcludePinsFromAudit": "Kurze Pin-Codes niemals prüfen (z. B. 12345)",
   "setGenHelpHIBP": "KeeWeb kann überprüfen ob deine Passwörter bei einem früheren Datenleck veröffentlicht wurden. Deine Passwörter können nicht beim übertragen ausgelesen werden, aber die Anzahl der überprüften Passwörter kann möglicherweise entdeckt werden. {} kannst du mehr über den Datenschutz beim Nutzen dieses Dienstes erfahren. Wenn diese Option aktiviert ist überprüft KeeWeb deine Passwörter automatisch.",
   "setGenHelpHIBPLink": "hier",
   "setGenAuditPasswordAge": "Alte Passwörter",
@@ -665,5 +689,7 @@
   "yubiKeyTouchRequestedHeader": "Bitte den YubiKey berühren",
   "yubiKeyTouchRequestedBody": "Bitte den YubiKey mit der Seriennummer {} berühren",
   "yubiKeyDisabledErrorHeader": "USB ist deaktiviert",
-  "yubiKeyDisabledErrorBody": "YubiKey ist zum Öffnen dieser Datei erforderlich. Bitte USB-Geräte in den Einstellungen aktivieren."
+  "yubiKeyDisabledErrorBody": "YubiKey ist zum Öffnen dieser Datei erforderlich. Bitte USB-Geräte in den Einstellungen aktivieren.",
+  "yubiKeyErrorWithCode": "YubiKey-Fehler, Code {}.",
+  "bioOpenAuthPrompt": "„{}“ öffnen"
 }
