--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -14,6 +14,7 @@
   "or": "of",
   "history": "Geschiedenis",
   "template": "Sjabloon",
+  "templates": "Sjablonen",
   "notImplemented": "Niet geïmplementeerd",
   "saveChanges": "Wijzigingen opslaan",
   "discardChanges": "Ongedaan maken",
@@ -200,10 +201,10 @@
   "openUrl": "URL",
   "openUrlDesc": "https://server/pad/bestand.kdbx of alleen bestand.kdbx",
   "openUser": "Gebruiker",
-  "openUserDesc": "WebDAV server gebruiker (als vereist)",
+  "openUserDesc": "WebDAV-server gebruikersnaam (indien vereist)",
   "openUserPlaceholder": "geen gebruiker",
   "openPass": "Wachtwoord",
-  "openPassDesc": "WebDAV server wachtwoord (dit is niet het wachtwoord van het databasebestand)",
+  "openPassDesc": "WebDAV-server wachtwoord (dit is niet het wachtwoord van het databasebestand)",
   "openPassPlaceholder": "geen wachtwoord",
   "openConfigError": "Fout: {}",
   "openConfigErrorNotFound": "Bestand niet gevonden",
@@ -305,7 +306,7 @@
   "detOtpQrWrongBody": "De QR-code was succesvol gescand, maar het bevat niet de gegevens van een eenmalige code.",
   "detOtpField": "Eenmalige code",
   "detOtpClickToTouch": "Klik om te genereren",
-  "detOtpGenerating": "Bezig met genereren...",
+  "detOtpGenerating": "Genereren...",
   "detOtpTouch": "Raak je {} aan",
   "detLockField": "Vergrendel dit veld opdat de inhoud niet doorzoekbaar en zichtbaar is. Als je de inhoud wilt weergeven, moet je er expliciet op klikken.",
   "detUnlockField": "Ontgrendel dit veld zodat de inhoud direct doorzoekbaar en zichtbaar wordt.",
