--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -14,6 +14,7 @@
   "or": "albo",
   "history": "Historia",
   "template": "Szablon",
+  "templates": "Szablony",
   "notImplemented": "Nie zaimplementowano",
   "saveChanges": "Zapisz zmiany",
   "discardChanges": "Odrzuć zmiany",
