--- a/docs/translations/sk/sk.json
+++ b/docs/translations/sk/sk.json
@@ -14,6 +14,7 @@
   "or": "alebo",
   "history": "história",
   "template": "šablóna",
+  "templates": "Šablóny",
   "notImplemented": "Neimplementované",
   "saveChanges": "Uložiť zmeny",
   "discardChanges": "Zahodiť zmeny",
@@ -56,6 +57,22 @@
   "menuItemCollapsed": "Rozbaliť dvojklikom",
   "menuRestoreApp": "Otvoriť {}",
   "menuQuitApp": "Ukončiť {}",
+  "sysMenuAboutKeeWeb": "O {}",
+  "sysMenuServices": "Služby",
+  "sysMenuHide": "Skryť {}",
+  "sysMenuHideOthers": "Skryť ostatné",
+  "sysMenuUnhide": "Zobraziť všetky",
+  "sysMenuQuit": "Ukončiť {}",
+  "sysMenuEdit": "Upraviť",
+  "sysMenuUndo": "Krok späť",
+  "sysMenuRedo": "Vykonať znovu",
+  "sysMenuCut": "Vystrihnúť",
+  "sysMenuCopy": "Kopírovať",
+  "sysMenuPaste": "Vložiť",
+  "sysMenuSelectAll": "Vybrať všetko",
+  "sysMenuWindow": "Okno",
+  "sysMenuMinimize": "Minimalizovať",
+  "sysMenuClose": "Zavrieť Okno",
   "alertYes": "Áno",
   "alertNo": "Nie",
   "alertOk": "OK",
@@ -193,6 +210,7 @@
   "openConfigErrorNotFound": "Súbor nenájdený",
   "openError": "Chyba",
   "openErrorDescription": "Chyba pri otváraní súboru",
+  "openErrorDescriptionMaybeTouchIdChanged": "Chyba zvyčajne nastáva, keď sa zmenia nastavenia Touch ID, napríklad, pridanie alebo odobratie prsta. Ak je to tento prípad, prejdite do Nastavení a zakážte a znovu povoľte Touch ID.",
   "openErrorFileNotFound": "Súbor nenájdený",
   "openListErrorBody": "Chyba čítania zoznamu súborov",
   "openShowAllFiles": "Zobraziť všetky súbory",
@@ -437,6 +455,7 @@
   "setGenLockOrSleep": "Keď je počítač zamknutý alebo uspaný",
   "setGenStorage": "Úložisko",
   "setGenDisableOfflineStorage": "Neukladať nahraté súbory do offline úložiska",
+  "setGenShortLivedStorageToken": "Použiť krátkodobé relácie pre poskytovateľov cloudového úložiska",
   "setGenStorageLogout": "Odhlásiť",
   "setGenShowAdvanced": "Zobraziť pokročilé nastavenia",
   "setGenDevTools": "Zobraziť vývojárske nástroje",
