--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -14,6 +14,7 @@
   "or": "чи",
   "history": "історія ",
   "template": "шаблон",
+  "templates": "шаблони",
   "notImplemented": "Не реалізовано ",
   "saveChanges": "Зберегти зміни ",
   "discardChanges": "Відмінити зміни ",
@@ -56,6 +57,22 @@
   "menuItemCollapsed": "Двічі натисніть, щоб розгорнути",
   "menuRestoreApp": "Відкрити {}",
   "menuQuitApp": "Вийти з {}",
+  "sysMenuAboutKeeWeb": "Про {}",
+  "sysMenuServices": "Послуги",
+  "sysMenuHide": "Приховати {}",
+  "sysMenuHideOthers": "Приховати інші",
+  "sysMenuUnhide": "Показати все",
+  "sysMenuQuit": "Вийти з {}",
+  "sysMenuEdit": "Редагувати",
+  "sysMenuUndo": "Відновити",
+  "sysMenuRedo": "Повернути",
+  "sysMenuCut": "Вирізати",
+  "sysMenuCopy": "Копіювати",
+  "sysMenuPaste": "Вставити",
+  "sysMenuSelectAll": "Вибрати все",
+  "sysMenuWindow": "Вікно",
+  "sysMenuMinimize": "Згорнути",
+  "sysMenuClose": "Закрити вікно",
   "alertYes": "Так",
   "alertNo": "Ні",
   "alertOk": "ОК",
@@ -193,6 +210,7 @@
   "openConfigErrorNotFound": "Файл не знайдено",
   "openError": "Помилка",
   "openErrorDescription": "Помилка під час відкриття файлу",
+  "openErrorDescriptionMaybeTouchIdChanged": "Ця помилка схожа на таку, що зазвичай стається при зміні налаштувань Touch ID, наприклад, ви додали чи вилучили відбиток. Якщо це такий випадок, відкрийте Налаштування, вимкніть Touch ID, а потім увімкніть знову.",
   "openErrorFileNotFound": "Файл не знайдено",
   "openListErrorBody": "Помилка завантаження списку файлів",
   "openShowAllFiles": "Показати всі файли",
@@ -437,6 +455,7 @@
   "setGenLockOrSleep": "Коли комп'ютер заблоковано або відправлено у сон",
   "setGenStorage": "Сховище",
   "setGenDisableOfflineStorage": "Не зберігати кеш завантажених файлів у автономному сховищі",
+  "setGenShortLivedStorageToken": "Використовувати короткострокові сеанси для провайдерів хмарних сховищ",
   "setGenStorageLogout": "Вийти",
   "setGenShowAdvanced": "Показати розширені налаштування",
   "setGenDevTools": "Засоби розробки",
