--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -14,6 +14,7 @@
   "or": "或",
   "history": "历史",
   "template": "模版",
+  "templates": "模版",
   "notImplemented": "未实现",
   "saveChanges": "保存更改",
   "discardChanges": "放弃更改",
@@ -56,6 +57,22 @@
   "menuItemCollapsed": "双击以展开",
   "menuRestoreApp": "打开 {}",
   "menuQuitApp": "退出 {}",
+  "sysMenuAboutKeeWeb": "关于 {}",
+  "sysMenuServices": "服务",
+  "sysMenuHide": "隐藏 {}",
+  "sysMenuHideOthers": "隐藏其他",
+  "sysMenuUnhide": "全部显示",
+  "sysMenuQuit": "退出 {}",
+  "sysMenuEdit": "编辑",
+  "sysMenuUndo": "撤销",
+  "sysMenuRedo": "重做",
+  "sysMenuCut": "剪切",
+  "sysMenuCopy": "拷贝",
+  "sysMenuPaste": "粘贴",
+  "sysMenuSelectAll": "全选",
+  "sysMenuWindow": "窗口",
+  "sysMenuMinimize": "最小化",
+  "sysMenuClose": "关闭窗口",
   "alertYes": "确定",
   "alertNo": "取消",
   "alertOk": "确定",
@@ -120,7 +137,7 @@
   "keyChangeTitleRemote": "主密钥已更改",
   "keyChangeMessageRemote": "此数据库的主密钥已更改。请输入新密钥",
   "keyChangeTitleExpired": "主密钥已过期",
-  "keyChangeMessageExpired": "该密码数据库密钥已过期，请输入新密钥",
+  "keyChangeMessageExpired": "该数据库的主密钥已过期，请输入新密钥",
   "keyChangeRepeatPassword": "密码，再输入一遍",
   "keyEnter": "输入",
   "iconFavTitle": "下载并使用站点图标",
@@ -193,6 +210,7 @@
   "openConfigErrorNotFound": "文件未找到",
   "openError": "错误",
   "openErrorDescription": "打开文件时出错",
+  "openErrorDescriptionMaybeTouchIdChanged": "该错误看起来与更改 Touch ID 设置时通常发生的错误类似，例如，您添加或移除了另一个手指。 在这种情况下，请转到“设置”，禁用 Touch ID，然后再次启用它。",
   "openErrorFileNotFound": "未找到文件",
   "openListErrorBody": "加载文件列表时出现错误",
   "openShowAllFiles": "显示所有文件",
@@ -437,6 +455,7 @@
   "setGenLockOrSleep": "当计算机被锁定或进入睡眠状态",
   "setGenStorage": "存储",
   "setGenDisableOfflineStorage": "不要在离线存储中缓存已加载的文件",
+  "setGenShortLivedStorageToken": "在云存储提供商中使用短暂的会话",
   "setGenStorageLogout": "退出",
   "setGenShowAdvanced": "显示高级设置",
   "setGenDevTools": "显示开发工具",
