--- a/docs/translations/zh-TW/zh-TW.json
+++ b/docs/translations/zh-TW/zh-TW.json
@@ -9,38 +9,68 @@
   "tags": "標籤",
   "notes": "備註",
   "entry": "紀錄",
-  "group": "分組",
+  "group": "群組",
   "noTitle": "無標題",
   "or": "或",
   "history": "歷史",
   "template": "範本",
+  "templates": "範本",
   "notImplemented": "未執行",
-  "saveChanges": "保存更改",
-  "discardChanges": "放棄更改",
-  "advanced": "高級",
+  "saveChanges": "儲存異動",
+  "discardChanges": "放棄異動",
+  "advanced": "進階",
   "shortcuts": "快捷鍵",
   "help": "幫助",
-  "settings": "設置",
+  "settings": "設定",
   "plugins": "擴充套件",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
+  "error": "錯誤",
+  "oneMinute": "一分鐘",
+  "minutes": "{}分鐘",
+  "oneHour": "一小時",
+  "hours": "{}小時",
+  "oneDay": "一天",
+  "days": "{}天",
+  "oneWeek": "一週",
+  "oneMonth": "一個月",
+  "oneYear": "一年",
   "cache": "緩存",
   "file": "檔案",
+  "device": "裝置",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
   "onedrive": "OneDrive",
   "menuAllItems": "所有項目",
   "menuColors": "顏色",
-  "menuTrash": "回收站",
-  "menuSetGeneral": "通用",
+  "menuTrash": "回收桶",
+  "menuSetGeneral": "一般",
   "menuSetAbout": "關於",
+  "menuSetDevices": "裝置",
   "menuAlertNoTags": "無標籤",
-  "menuAlertNoTagsBody": "您可以在標籤部分的編輯區域中新建標籤.",
-  "menuEmptyTrash": "清空回收站",
-  "menuEmptyTrashAlert": "確認清空回收站?",
+  "menuAlertNoTagsBody": "您可以在標籤欄位中新增標籤。",
+  "menuEmptyTrash": "清空回收桶",
+  "menuEmptyTrashAlert": "確定清空回收桶？",
   "menuEmptyTrashAlertBody": "您將無法恢復這些項目",
   "menuItemCollapsed": "雙擊以展開",
   "menuRestoreApp": "開啟 {}",
   "menuQuitApp": "離開 {}",
+  "sysMenuAboutKeeWeb": "關於 {}",
+  "sysMenuHide": "隱藏 {}",
+  "sysMenuUnhide": "全部顯示",
+  "sysMenuQuit": "離開 {}",
+  "sysMenuEdit": "編輯",
+  "sysMenuUndo": "回復",
+  "sysMenuRedo": "重做",
+  "sysMenuCut": "剪下",
+  "sysMenuCopy": "複製",
+  "sysMenuPaste": "貼上",
+  "sysMenuSelectAll": "全選",
+  "sysMenuWindow": "視窗",
+  "sysMenuMinimize": "最小化",
+  "sysMenuClose": "關閉視窗",
   "alertYes": "確定",
   "alertNo": "取消",
   "alertOk": "確定",
@@ -49,9 +79,9 @@
   "alertCopy": "複製",
   "alertClose": "關閉",
   "alertDoNotAsk": "不再詢問",
-  "appBeta": "警告:測試版本,僅供預覽.",
+  "appBeta": "警告：測試版本，僅供預覽。",
   "footerOpen": "打開 / 新建",
-  "footerSyncError": "同步出錯",
+  "footerSyncError": "同步錯誤",
   "footerTitleGen": "生成",
   "footerTitleLock": "鎖定",
   "genLen": "長度",
@@ -61,29 +91,29 @@
   "genPresetPronounceable": "可拼讀",
   "genPresetMed": "中等長度",
   "genPresetLong": "長",
-  "genPresetPin4": "4位 PIN",
-  "genPresetMac": "MAC 地址",
-  "genPresetHash128": "128位元散列",
-  "genPresetHash256": "256位元散列",
+  "genPresetPin4": "4位PIN碼",
+  "genPresetMac": "MAC位址",
+  "genPresetHash128": "128位元雜湊",
+  "genPresetHash256": "256位元雜湊",
   "genHidePass": "隱藏密碼",
   "genShowPass": "顯示密碼",
-  "grpTitle": "分組",
-  "grpSearch": "允許搜索當前分組下的記錄",
-  "grpAutoType": "啟用自動鍵入",
-  "grpAutoTypeSeq": "自動鍵入序列",
-  "grpAutoTypeSeqDefault": "使用默認的自動鍵入序列",
-  "grpTrash": "刪除分組及所有記錄",
+  "grpTitle": "群組",
+  "grpSearch": "允許搜尋本群組下的紀錄",
+  "grpAutoType": "啟用自動輸入",
+  "grpAutoTypeSeq": "自動輸入順序",
+  "grpAutoTypeSeqDefault": "使用預設的自動輸入順序",
+  "grpTrash": "刪除群組及其下所有紀錄",
   "tagTitle": "標籤",
-  "tagTrash": "從所有記錄中移除標籤",
-  "tagRename": "重命名",
-  "tagTrashQuestion": "確認從所有記錄中移除標籤?",
-  "tagTrashQuestionBody": "該標籤將從所有密碼記錄中刪除,它將難以恢復.",
+  "tagTrash": "從所有紀錄中移除標籤",
+  "tagRename": "重新命名",
+  "tagTrashQuestion": "確定從所有紀錄中移除標籤？",
+  "tagTrashQuestionBody": "此標籤將從所有紀錄中刪除。此舉將難以回復。",
   "tagExists": "標籤已存在",
-  "tagExistsBody": "該標籤名已存在,請使用其他名稱.",
-  "tagBadName": "非法名稱",
-  "tagBadNameBody": "標籤名稱中不能包含字符{},請刪除它們.",
+  "tagExistsBody": "此標籤名稱已存在，請使用其他名稱。",
+  "tagBadName": "非法的名稱",
+  "tagBadNameBody": "標籤名稱中不能包含{}等字符，請刪除它們。",
   "genPsTitle": "產生器預設",
-  "genPsCreate": "新預設",
+  "genPsCreate": "新增預設",
   "genPsDelete": "刪除預設",
   "genPsNew": "預設",
   "genPsEnabled": "在預設列表中顯示",
@@ -98,7 +128,7 @@
   "genPsAmbiguous": "相似字符",
   "genPsInclude": "要包含的其他符號",
   "genPsExample": "生成密碼範例",
-  "genPsPatternHelp": "Patterns 可做為生成密碼字元時的一組特定規則。例如，'1-AA' 可產生的密碼組成是符合起始1個數字、接續是一個'-'符號，最後是兩個ASCII字元。你可使用這些字符：",
+  "genPsPatternHelp": "您可以使用Pattern作為生成密碼時的一組特定規則。例如，「1-AA」會根據「以一個數字為開頭，接著一個『-』符號，再接著兩個字母」的規則來產生密碼。您可以使用的符號如下：",
   "genPsAllRanges": "任意字符",
   "keyChangeTitleRemote": "主密鑰已更改",
   "keyChangeMessageRemote": "此數據庫的主密鑰已更改,請輸入新密鑰.",
