--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -14,6 +14,7 @@
   "or": "o",
   "history": "historial",
   "template": "plantilla",
+  "templates": "Plantillas",
   "notImplemented": "No implementado",
   "saveChanges": "Guardar cambios",
   "discardChanges": "Descartar cambios",
