--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -14,6 +14,7 @@
   "or": "vagy",
   "history": "előzmény",
   "template": "sablon",
+  "templates": "sablonok",
   "notImplemented": "Nincs megvalósítva",
   "saveChanges": "Módosítások mentése",
   "discardChanges": "Módosítások elvetése",
