--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -14,6 +14,7 @@
   "or": "または",
   "history": "履歴",
   "template": "テンプレート",
+  "templates": "テンプレート",
   "notImplemented": "未実装",
   "saveChanges": "変更を保存する",
   "discardChanges": "変更を破棄する",
